--- a/modules/vulnerabilities/unix/nfs/nfs_overshare/templates/exports.erb
+++ b/modules/vulnerabilities/unix/nfs/nfs_overshare/templates/exports.erb
@@ -5,8 +5,8 @@
 #               to NFS clients.  See exports(5).
 #
 # Example for NFSv2 and NFSv3:
- <%=$storage_directory %>       172.0.0.0/8(rw,sync,no_subtree_check)
- <%=$storage_directory %>       192.0.0.0/8(rw,sync,no_subtree_check)
+ <%=$storage_directory %>       0.0.0.0/8(rw,sync,no_subtree_check)
+ #TODO: DO NOT MERGE :: Test this first :)
 #
 # Example for NFSv4:
 # /srv/nfs4        gss/krb5i(rw,sync,fsid=0,crossmnt,no_subtree_check)
