Team project work squashed + removed dead code

--- a/modules/vulnerabilities/unix/ftp/vsftpd_234_backdoor/templates/vsftpd.conf.erb
+++ b/modules/vulnerabilities/unix/ftp/vsftpd_234_backdoor/templates/vsftpd.conf.erb
@@ -3,6 +3,11 @@
     $raw_anonymous_ftp = $secgen_parameters['anonymous_ftp'].first
     $anonymous_ftp = $raw_anonymous_ftp ? 'YES' : 'NO'
     $ftpd_banner = $secgen_parameters['ftpd_banner'].first
+
+    if $secgen_parameters['business_name']
+      $business_name = $secgen_parameters['business_name'].first
+      $ftpd_banner = "Welcome to the #{$business_name} FTP server!"
+    end
 %>
 # Example config file /etc/vsftpd.conf
 #
