--- a/modules/vulnerabilities/unix/ftp/proftpd_133c_backdoor/templates/proftpd.erb
+++ b/modules/vulnerabilities/unix/ftp/proftpd_133c_backdoor/templates/proftpd.erb
@@ -2,6 +2,15 @@
     $secgen_parameters = JSON.parse(@json_inputs)
     $server_name = $secgen_parameters['server_name'].first
     $welcome_msg = $secgen_parameters['welcome_msg'].first
+
+    if $secgen_parameters['business_name']
+      $business_name = $secgen_parameters['business_name'].first
+      $welcome_msg = "Welcome to the #{$business_name} FTP server!"
+    end
+
+    if $secgen_parameters['business_domain']
+      $server_name = $secgen_parameters['business_domain'].first
+    end
 %>
 #
 # /etc/proftpd/proftpd.conf -- This is a basic ProFTPD configuration file.
