Special Character work + generator/encoder superclass refactor.
The full Vagrantfile facter string has been encoded in b64 for now, would be nice to b64 the individual arguments rather than the whole string.

--- a/modules/vulnerabilities/unix/irc/unrealirc_3281_backdoor/templates/unrealircd.conf.erb
+++ b/modules/vulnerabilities/unix/irc/unrealirc_3281_backdoor/templates/unrealircd.conf.erb
@@ -8,7 +8,7 @@
 
     # Team Project style scenario overrides.
     if $secgen_parameters['person']
-      $admin = $secgen_parameters['person'].first
+      $admin = JSON.parse($secgen_parameters['person'].first)
       $admins = [ $admin['username'] + ' <' + $admin['email_address'] + '>' ]
     end
 
