--- a/modules/vulnerabilities/unix/webapp/moinmoin_195/templates/article.erb
+++ b/modules/vulnerabilities/unix/webapp/moinmoin_195/templates/article.erb
@@ -1,7 +1,6 @@
 <% require 'json'
-   $secgen_parameters = JSON.parse(@json_inputs)
-   if $secgen_parameters['person']
-     $person = $secgen_parameters['person'][0]
+   if @secgen_parameters['person']
+     $person = JSON.parse(@secgen_parameters['person'][0])
    end
 
    if $secgen_parameters['business_name']
