--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/acceptable_use_policy.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/acceptable_use_policy.html.erb
@@ -6,34 +6,34 @@
       <p>Internet/Intranet/Extranet-related systems, including but not limited to computer equipment, software,
         operating
         systems, storage media, network accounts providing electronic mail, WWW browsing, and FTP, are the property of
-        <%= $business_name %>. These systems are to be used for business purposes in serving the interests of the
+        <%= @business_name %>. These systems are to be used for business purposes in serving the interests of the
         company, and of our
         clients and customers in the course of normal operations. Please review Human Resources policies for further
         details.</p>
-      <p>Effective security is a team effort involving the participation and support of every <%= $business_name %>
+      <p>Effective security is a team effort involving the participation and support of every <%= @business_name %>
         employee and
         affiliate who deals with information and/or information systems. It is the responsibility of every computer user
         to
         know these guidelines, and to conduct their activities accordingly.</p>
       <h1 id="purpose">Purpose</h1>
-      <p>The purpose of this policy is to outline the acceptable use of computer equipment at <%= $business_name %>.
+      <p>The purpose of this policy is to outline the acceptable use of computer equipment at <%= @business_name %>.
         These rules are in
-        place to protect the employee and <%= $business_name %>. Inappropriate use exposes <%= $business_name %> to
+        place to protect the employee and <%= @business_name %>. Inappropriate use exposes <%= @business_name %> to
         risks including virus attacks,
         compromise of network systems and services, and legal issues.</p>
       <h1 id="scope">Scope</h1>
       <p>This policy applies to the use of information, electronic and computing devices, and network resources to
         conduct
-        <%= $business_name %> business or interact with internal networks and business systems, whether owned or leased
-        by <%= $business_name %>,
+        <%= @business_name %> business or interact with internal networks and business systems, whether owned or leased
+        by <%= @business_name %>,
         the employee, or a third party. All employees, contractors, consultants, temporary, and other workers
-        at <%= $business_name %>
+        at <%= @business_name %>
         and its subsidiaries are responsible for exercising good judgment regarding appropriate use of information,
-        electronic devices, and network resources in accordance with <%= $business_name %> policies and standards, and
+        electronic devices, and network resources in accordance with <%= @business_name %> policies and standards, and
         local laws and
         regulation. Exceptions to this policy are documented in section 5.2</p>
       <p>This policy applies to employees, contractors, consultants, temporaries, and other workers
-        at <%= $business_name %>, including
+        at <%= @business_name %>, including
         all personnel affiliated with third parties. This policy applies to all equipment that is owned or leased by
         Bednar
         Inc.</p>
@@ -42,20 +42,20 @@
           <ol style="list-style-type: decimal">
             <li><p>General Use and Ownership --------------------------</p>
               <ol style="list-style-type: decimal">
-                <li><p><%= $business_name %> proprietary information stored on electronic and computing devices whether
+                <li><p><%= @business_name %> proprietary information stored on electronic and computing devices whether
                   owned
-                  or leased by <%= $business_name %>, the employee or a third party, remains the sole property
-                  of <%= $business_name %>.
+                  or leased by <%= @business_name %>, the employee or a third party, remains the sole property
+                  of <%= @business_name %>.
                   You must ensure through legal or technical means that proprietary information is protected in
                   accordance with the <em>Data Protection Standard.</em>
                   ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </p></li>
                 <li><p>You have a responsibility to promptly report the theft, loss or unauthorized disclosure of
-                  <%= $business_name %> proprietary information.
+                  <%= @business_name %> proprietary information.
                   ----------------------------------------------------------------------------------------------------------------------------------------</p>
                 </li>
                 <li>
-                  <p>You may access, use or share <%= $business_name %> proprietary information only to the extent it is
+                  <p>You may access, use or share <%= @business_name %> proprietary information only to the extent it is
                     authorized and necessary to fulfill your assigned job duties.
                     ----------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
                 </li>
@@ -67,12 +67,12 @@
                   --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
                 </li>
                 <li>
-                  <p>For security and network maintenance purposes, authorized individuals within <%= $business_name %>
+                  <p>For security and network maintenance purposes, authorized individuals within <%= @business_name %>
                     may
                     monitor equipment, systems and network traffic at any time, per Infosec&rsquo;s <em>Audit Policy</em>.
                     ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
                   </p></li>
-                <li><p><%= $business_name %> reserves the right to audit networks and systems on a periodic basis to
+                <li><p><%= @business_name %> reserves the right to audit networks and systems on a periodic basis to
                   ensure
                   compliance with this policy.
                   ---------------------------------------------------------------------------------------------------------------------------------</p>
@@ -89,9 +89,9 @@
                 <li><p>All computing devices must be secured with a password-protected screensaver with the
                   automatic activation feature set to 10 minutes or less. You must lock the screen or log off when
                   the device is unattended.</p></li>
-                <li><p>Postings by employees from a <%= $business_name %> email address to newsgroups should contain a
+                <li><p>Postings by employees from a <%= @business_name %> email address to newsgroups should contain a
                   disclaimer stating that the opinions expressed are strictly their own and not necessarily those
-                  of <%= $business_name %>, unless posting is in the course of business duties.</p></li>
+                  of <%= @business_name %>, unless posting is in the course of business duties.</p></li>
                 <li><p>Employees must use extreme caution when opening e-mail attachments received from unknown
                   senders, which may contain malware.</p></li>
               </ol>
@@ -105,9 +105,9 @@
         course of their legitimate job responsibilities (e.g., systems administration staff may have a need to disable
         the
         network access of a host if that host is disrupting production services).</p>
-      <p>Under no circumstances is an employee of <%= $business_name %> authorized to engage in any activity that is
+      <p>Under no circumstances is an employee of <%= @business_name %> authorized to engage in any activity that is
         illegal under local,
-        state, federal or international law while utilizing <%= $business_name %>-owned resources.</p>
+        state, federal or international law while utilizing <%= @business_name %>-owned resources.</p>
       <p>The lists below are by no means exhaustive, but attempt to provide a framework for activities which fall into
         the
         category of unacceptable use.</p>
@@ -119,14 +119,14 @@
         <li><p>Violations of the rights of any person or company protected by copyright, trade secret, patent or other
           intellectual property, or similar laws or regulations, including, but not limited to, the installation or
           distribution of &quot;pirated&quot; or other software products that are not appropriately licensed for use by
-          <%= $business_name %>.</p></li>
+          <%= @business_name %>.</p></li>
         <li><p>Unauthorized copying of copyrighted material including, but not limited to, digitization and distribution
           of
           photographs from magazines, books or other copyrighted sources, copyrighted music, and the installation of any
-          copyrighted software for which <%= $business_name %> or the end user does not have an active license is
+          copyrighted software for which <%= @business_name %> or the end user does not have an active license is
           strictly
           prohibited.</p></li>
-        <li><p>Accessing data, a server or an account for any purpose other than conducting <%= $business_name %>
+        <li><p>Accessing data, a server or an account for any purpose other than conducting <%= @business_name %>
           business, even if you
           have authorized access, is prohibited.</p></li>
         <li>
@@ -141,10 +141,10 @@
           and
           other household members when work is being done at home.</p></li>
         <li>
-          <p>Using a <%= $business_name %> computing asset to actively engage in procuring or transmitting material that
+          <p>Using a <%= @business_name %> computing asset to actively engage in procuring or transmitting material that
             is in
             violation of sexual harassment or hostile workplace laws in the user&rsquo;s local jurisdiction.</p></li>
-        <li><p>Making fraudulent offers of products, items, or services originating from any <%= $business_name %>
+        <li><p>Making fraudulent offers of products, items, or services originating from any <%= @business_name %>
           account.</p></li>
         <li><p>Making statements about warranty, expressly or implied, unless it is a part of normal job duties.</p>
         </li>
@@ -162,13 +162,13 @@
         <li><p>Executing any form of network monitoring which will intercept data not intended for the employee&rsquo;s host,
           unless this activity is a part of the employee&rsquo;s normal job/duty.</p></li>
         <li><p>Circumventing user authentication or security of any host, network or account.</p></li>
-        <li><p>Introducing honeypots, honeynets, or similar technology on the <%= $business_name %> network.</p></li>
+        <li><p>Introducing honeypots, honeynets, or similar technology on the <%= @business_name %> network.</p></li>
         <li><p>Interfering with or denying service to any user other than the employee&rsquo;s host (for example, denial of
           service attack).</p></li>
         <li><p>Using any program/script/command, or sending messages of any kind, with the intent to interfere with, or
           disable, a user&rsquo;s terminal session, via any means, locally or via the Internet/Intranet/Extranet.</p></li>
-        <li><p>Providing information about, or lists of, <%= $business_name %> employees to parties
-          outside <%= $business_name %>.</p>
+        <li><p>Providing information about, or lists of, <%= @business_name %> employees to parties
+          outside <%= @business_name %>.</p>
           <ol style="list-style-type: decimal">
             <li>Email and Communication Activities</li>
           </ol>
@@ -191,10 +191,10 @@
         <li>
           <p>Creating or forwarding &quot;chain letters&quot;, &quot;Ponzi&quot; or other &quot;pyramid&quot; schemes of
             any type.</p></li>
-        <li><p>Use of unsolicited email originating from within <%= $business_name %>&rsquo;s networks of other
+        <li><p>Use of unsolicited email originating from within <%= @business_name %>&rsquo;s networks of other
           Internet/Intranet/Extranet
-          service providers on behalf of, or to advertise, any service hosted by <%= $business_name %> or connected
-          via <%= $business_name %>&rsquo;s
+          service providers on behalf of, or to advertise, any service hosted by <%= @business_name %> or connected
+          via <%= @business_name %>&rsquo;s
           network.</p></li>
         <li>
           <p>Posting the same or similar non-business-related messages to large numbers of Usenet newsgroups (newsgroup
@@ -208,36 +208,36 @@
 
       <ol style="list-style-type: decimal">
         <li>
-          <p>Blogging by employees, whether using <%= $business_name %>’s property &gt; and systems or personal computer
+          <p>Blogging by employees, whether using <%= @business_name %>’s property &gt; and systems or personal computer
             systems, is
             also subject to the &gt; terms and restrictions set forth in this Policy. Limited and &gt; occasional use of
-            <%= $business_name %>’s systems to engage in &gt; blogging is acceptable, provided that it is done in a
+            <%= @business_name %>’s systems to engage in &gt; blogging is acceptable, provided that it is done in a
             professional &gt;
-            and responsible manner, does not otherwise violate &gt; <%= $business_name %>’s policy, is not detrimental
-            to <%= $business_name %>’s
+            and responsible manner, does not otherwise violate &gt; <%= @business_name %>’s policy, is not detrimental
+            to <%= @business_name %>’s
             &gt; best interests, and does not interfere with an employee&rsquo;s regular &gt; work duties. Blogging from
             Bednar
             Inc’s systems is also &gt; subject to monitoring.</p></li>
-        <li><p><%= $business_name %>’s Confidential Information policy also applies &gt; to blogging. As such, Employees
+        <li><p><%= @business_name %>’s Confidential Information policy also applies &gt; to blogging. As such, Employees
           are prohibited
-          from revealing any &gt; <%= $business_name %> confidential or proprietary information, trade &gt; secrets or
+          from revealing any &gt; <%= @business_name %> confidential or proprietary information, trade &gt; secrets or
           any other
-          material covered by <%= $business_name %>’s &gt; Confidential Information policy when engaged in blogging.</p>
+          material covered by <%= @business_name %>’s &gt; Confidential Information policy when engaged in blogging.</p>
         </li>
         <li><p>Employees shall not engage in any blogging that may harm or tarnish &gt; the image, reputation and/or
-          goodwill of <%= $business_name %> &gt; and/or any of its employees. Employees are also prohibited from &gt;
+          goodwill of <%= @business_name %> &gt; and/or any of its employees. Employees are also prohibited from &gt;
           making any
           discriminatory, disparaging, defamatory or harassing &gt; comments when blogging or otherwise engaging in any
-          conduct &gt; prohibited by <%= $business_name %>’s <em>Non-Discrimination and &gt; Anti-Harassment</em>
+          conduct &gt; prohibited by <%= @business_name %>’s <em>Non-Discrimination and &gt; Anti-Harassment</em>
           policy.</p></li>
-        <li><p>Employees may also not attribute personal statements, opinions or &gt; beliefs to <%= $business_name %>
+        <li><p>Employees may also not attribute personal statements, opinions or &gt; beliefs to <%= @business_name %>
           when engaged in
           blogging. If an &gt; employee is expressing his or her beliefs and/or opinions in &gt; blogs, the employee may
           not, expressly or implicitly, represent &gt; themselves as an employee or representative
-          of &gt; <%= $business_name %>.
+          of &gt; <%= @business_name %>.
           Employees assume any and all risk associated &gt; with blogging.</p></li>
         <li><p>Apart from following all laws pertaining to the handling and &gt; disclosure of copyrighted or export
-          controlled materials, &gt; <%= $business_name %>’s trademarks, logos and any other <%= $business_name %> &gt;
+          controlled materials, &gt; <%= @business_name %>’s trademarks, logos and any other <%= @business_name %> &gt;
           intellectual property
           may also not be used in connection &gt; with any blogging activity</p></li>
       </ol>
