--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/header.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/header.html.erb
@@ -1,7 +1,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title><%= $business_name %> - <%=$current_page %></title>
+  <title><%= @business_name %> - <%=$current_page %></title>
   <!-- Default stylesheet -->
   <link rel="stylesheet" href="css/default.css"/>
   <!-- Latest compiled and minified CSS -->
