--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/navbar.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/navbar.html.erb
@@ -4,10 +4,10 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <% if $security_audit -%>
+          <% if @security_audit -%>
           <li><a href="security_audit_remit.html">Security Audit Remit</a></li>
           <% end -%>
-          <% if $security_audit -%>
+          <% if @security_audit -%>
           <li><a href="acceptable_use_policy.html">Acceptable Use Policy</a></li>
           <% end -%>
         </ul>
