generators/image/random_image: Returns random image as a base64 string. leaks the image to the parameterised_website. Icons in the public domain - thanks to http://publicicons.org/

--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/index.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/index.html.erb
@@ -1,6 +1,6 @@
 <% $current_page = 'Homepage' %>
 <html>
-<!-- <%= @ctf_flags[0] %> -->
+<!-- <%= @strings_to_leak[0] %> -->
 <%= scope.function_template(['parameterised_website/subtemplates/header.html.erb']) %>
 <body>
   <%= scope.function_template(['parameterised_website/subtemplates/navbar.html.erb']) %>
