--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -18,17 +18,17 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     else
 "      vb.gui = false
       vb.customize ['modifyvm', :id, '--pae', 'on']
-      vb.customize ['modifyvm', :id, '--hwvirtex', 'off']
+      vb.customize ['modifyvm', :id, '--hwvirtex', 'on']
       vb.customize ['modifyvm', :id, '--vtxvpid', 'off']"
-    end -%>
+    end %>
 <%= if (@options.has_key? :memory_per_vm)
 "      vb.memory = #{@options[:memory_per_vm]}"
     elsif (@options.has_key? :total_memory)
 "      vb.memory = #{@options[:total_memory]}/#{@systems.length}"
-    end -%>
+    end %>
 <%= if (@options.has_key? :max_cpu_cores)
 "      vb.cpus = #{@options[:max_cpu_cores]}"
-    end -%>
+    end %>
 <%= if (@options.has_key? :max_cpu_usage)
 "      vb.customize ['modifyvm', :id, '--cpuexecutioncap', '#{@options[:max_cpu_usage]}']"
     end %>
@@ -45,7 +45,15 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
      when 'base' -%>
     <%= system.name %>.vm.box = "<%= selected_module.module_path_name %>"
     <%= system.name %>.vm.box_url = "<%= selected_module.attributes['url'].first %>"
-<%   when 'network' -%>
+
+    <% if (selected_module.attributes['platform'].first.downcase == 'windows') %>
+    config.vm.communicator = 'winrm'
+    config.vm.guest = :windows
+    config.vm.network :forwarded_port, guest: 3389, host: 3389
+    config.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
+    <% end %>
+
+        <%   when 'network' -%>
 <%     if selected_module.attributes['range'].first.nil? || selected_module.attributes['range'].first == "dhcp" -%>
     <%= system.name %>.vm.network :<%= selected_module.attributes['type'].first %>, type: "dhcp"
 <%     else -%>
