--- a/modules/vulnerabilities/unix/ftp/vsftpd_234_backdoor/templates/vsftpd.conf.erb
+++ b/modules/vulnerabilities/unix/ftp/vsftpd_234_backdoor/templates/vsftpd.conf.erb
@@ -1,5 +1,6 @@
 <%  require 'json'
     $secgen_parameters = JSON.parse(@json_inputs)
+    $port = $secgen_parameters['port'].first
     $raw_anonymous_ftp = $secgen_parameters['anonymous_ftp'].first
     $anonymous_ftp = $raw_anonymous_ftp ? 'YES' : 'NO'
     $ftpd_banner = $secgen_parameters['ftpd_banner'].first
@@ -25,6 +26,8 @@ anonymous_enable=<%=$anonymous_ftp%>
 ftp_username=ftp
 # Uncomment this to allow local users to log in.
 local_enable=YES
+# Listen port
+listen_port=<%=$port%>
 #
 # Uncomment this to enable any form of FTP write command.
 #write_enable=YES
