Added JQuery + custom .js file, updated bootstrap / css

--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/footer.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/footer.html.erb
@@ -1,4 +1,3 @@
 <footer>
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="js/bootstrap.min.js"></script>
+  <!-- TODO: Remove me? Drop some more info here? -->
 </footer>
