--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/header.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/header.html.erb
@@ -1,11 +1,18 @@
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title><%= @business_name %> - <%=$current_page %></title>
+
   <!-- Default stylesheet -->
-  <link rel="stylesheet" href="css/default.css"/>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <!-- Optional theme -->
-  <link rel="stylesheet" href=css/bootstrap-theme.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/default.css"/>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+
+  <!-- Latest compiled JavaScript -->
+  <script type="text/javascript" src="js/jquery-1.12.4.js"></script>
+  <script type="text/javascript" src="js/jquery-ui.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/default.js"></script>
+
 </head>
