--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/main_container.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/main_container.html.erb
@@ -17,9 +17,13 @@
           <p><%= @main_page_paragraph_content.join %></p>
       <% end -%>
       <br/>
-      <% @images_to_leak.each_with_index{ |image_to_leak, counter| -%>
+      <% @images_to_leak.each_with_index{ |_, counter| -%>
           <img src="image<%=counter + 1 %>.png" height="128" width="128">
       <%} -%>
+
+      <% if @visible_tabs -%>
+          <%= scope.function_template(['parameterised_website/subtemplates/tab_panel.html.erb']) %>
+      <% end -%>
     </div>
   </div>
 </div>
