--- a/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/footer.html.erb
+++ b/modules/vulnerabilities/unix/webapp/parameterised_website/templates/subtemplates/footer.html.erb
@@ -1,3 +1,7 @@
 <footer>
-  <!-- TODO: Remove me? Drop some more info here? -->
+  <!-- Latest compiled JavaScript -->
+  <script type="text/javascript" src="js/jquery-1.12.4.js"></script>
+  <script type="text/javascript" src="js/jquery-ui.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/default.js"></script>
 </footer>
