--- a/modules/vulnerabilities/unix/ftp/vsftpd_234_backdoor/templates/vsftpd.conf.erb
+++ b/modules/vulnerabilities/unix/ftp/vsftpd_234_backdoor/templates/vsftpd.conf.erb
@@ -3,11 +3,11 @@
     $port = $secgen_parameters['port'].first
     $raw_anonymous_ftp = $secgen_parameters['anonymous_ftp'].first
     $anonymous_ftp = $raw_anonymous_ftp ? 'YES' : 'NO'
-    $ftpd_banner = $secgen_parameters['ftpd_banner'].first
 
-    if $secgen_parameters['business_name']
-      $business_name = $secgen_parameters['business_name'].first
-      $ftpd_banner = "Welcome to the #{$business_name} FTP server!"
+    if @organisation and @organisation != ''
+      $ftpd_banner = "Welcome to the #{@organisation['business_name']} FTP server!"
+    else
+      $ftpd_banner = $secgen_parameters['ftpd_banner'].first
     end
 %>
 # Example config file /etc/vsftpd.conf
